instructionC.jpg -> instructionD.png

--- a/chunk_includes/instruction_3.html
+++ b/chunk_includes/instruction_3.html
@@ -22,7 +22,7 @@
 <header>
 </header>
 <p><input type="checkbox" class="obligatory">The pictures may have different sizes or orientations.</p>
-<img src="https://raw.githubusercontent.com/awpzs/RC_ENG_Priming/master/images/instructionC.jpg" alt="sizes/orientations" class="center">
+<img src="https://raw.githubusercontent.com/awpzs/RC_ENG_Priming_RC_Colour/master/images/instructionD.png" alt="sizes/orientations" class="center">
 <p>Please press "Continue" to proceed.</p>
 <label class="error" for="__ALL_FIELDS__"></label>
 </body>
